# aura

./: .coverage  .env.example  .gitattributes  .gitignore  BOOT_PROMPT.txt  Makefile  ORION_V3_SPECIFICATIONS.md  PROMPTS.txt  README.md  implementation_plan.md  pyproject.toml
.agents/rules/: system.md
.github/workflows/: ci.yml
brain/: bridge.json  llm_config.json  memory.json  personality.json  principles.json  projects.json  scores.json
brain/ab695c57-594c-4af5-b697-52c9467f4cbb/: task.md
brain/missions/: PRJ-COWBOY-02.json  PRJ-COWBOY-82.json  PRJ-DER-51.json  PRJ-DHDSH-26.json  PRJ-DUSAL-95.json  PRJ-EASY-2.json  PRJ-FINAL-54.json  PRJ-JPP-41.json  PRJ-MIDILE-24.json  PRJ-NEW11H-17.json  PRJ-NONMA-75.json  PRJ-ORION-01.json  PRJ-RAAA11-1.json  PRJ-TEST-98.json
core/: __init__.py  config.py  llm.py  paths.py  ui.py  version.py
core/graph/: __init__.py  compiler.py  mission_io.py  nodes.py  persistence.py  router.py  skills.py  state.py
core/infra/: __init__.py  event_bus.py  llm_utils.py  logging.py  telemetry.py
core/sentinels/: __init__.py  atlas.py  git_drift.py  health.py  knowledge.py  log_rotator.py  resources.py  utils.py  (+2 more)
docs/: implementation_plan.md  portal_specs.md  processus_git.md
experts/: registry.yaml
ops/: __init__.py  adaptive_memory.py  cognitive_flag.py  crystallize.py  dynamic_orchestrator.py  git_status.py  governance.py  identity_seal.py  integrity_check.py  launcher.py  llm_tool.py  memory_rag.py  promote.py  sentinel_manager.py  sovereign_guard.py  validate.py  version_bump.py
scratch/: list_routes.py  purge_debris.py
(+189 files in other folders)
